currency-app-chart/templates/daemonset.yml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: currency-app
  labels:
    app.kubernetes.io/name: test-release
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: test-release
  template:
    metadata:
      labels:
        app.kubernetes.io/name: test-release
    spec:
      containers:
        - name: currency-app
          image: penteka/currency_app:1
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 500m
              memory: 384Mi
            requests:
              cpu: 250m
              memory: 192Mi
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /info
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
